--- a/llama-index-googledocs-qa/.chainlit/config.toml
+++ b/llama-index-googledocs-qa/.chainlit/config.toml
@@ -19,6 +19,9 @@ enable_telemetry = true
 # List of environment variables to be provided by each user to use the app.
 user_env = []
 
+# Duration (in seconds) during which the session is saved when the connection is lost
+session_timeout = 3600
+
 [UI]
 # Name of the app and chatbot.
 name = "Chatbot"
@@ -35,5 +38,26 @@ hide_cot = false
 # Link to your github repo. This will add a github button in the UI's header.
 # github = ""
 
+# Override default MUI light theme. (Check theme.ts)
+[UI.theme.light]
+    #background = "#FAFAFA"
+    #paper = "#FFFFFF"
+
+    [UI.theme.light.primary]
+        #main = "#F80061"
+        #dark = "#980039"
+        #light = "#FFE7EB"
+
+# Override default MUI dark theme. (Check theme.ts)
+[UI.theme.dark]
+    #background = "#FAFAFA"
+    #paper = "#FFFFFF"
+
+    [UI.theme.dark.primary]
+        #main = "#F80061"
+        #dark = "#980039"
+        #light = "#FFE7EB"
+
+
 [meta]
-generated_by = "0.5.0"
+generated_by = "0.6.1"
