--- a/chroma-qa-chat/Dockerfile
+++ b/chroma-qa-chat/Dockerfile
@@ -8,4 +8,4 @@ COPY --chown=user . $HOME/app
 COPY ./requirements.txt ~/app/requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
-CMD ["chainlit", "run", "app.py", "--port", "7860"]
+CMD ["chainlit", "run", "app.py", "--port", "7860", "-h"]
