--- a/aws-ecs-deployment/Dockerfile
+++ b/aws-ecs-deployment/Dockerfile
@@ -1,8 +1,8 @@
 # Use an appropriate base image, e.g., python:3.10-slim
-# FROM --platform=linux/amd64 python:3.9-slim
-FROM python:3.9-slim
+FROM --platform=linux/amd64 python:3.9-slim
+
 # Set environment variables (e.g., set Python to run in unbuffered mode)
-ENV PYTHONUNBUFFERED=1 
+ENV PYTHONUNBUFFERED=1
 
 # Set the working directory
 WORKDIR /app
