Added an updated version of this app, which now includes LangGraph. The Bing Search API has been sunset, so it's not included anymore.

--- a/langchain-azure-agent/.env.example
+++ b/langchain-azure-agent/.env.example
@@ -1,5 +1,5 @@
 AZURE_OPENAI_API_VERSION=
-AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=gpt-4o
+AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=gpt-4.1
 AZURE_OPENAI_EMBEDDINGS_DEPLOYMENT_NAME=text-embedding-3-large
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_API_KEY=
@@ -16,5 +16,3 @@ AZURE_SEARCH_APP_ID=
 AZURE_SEARCH_APP_SECRET=
 DOCUMENT_INTELLIGENCE_ENDPOINT=
 DOCUMENT_INTELLIGENCE_API_KEY=
-BING_SEARCH_API_KEY=
-BING_SEARCH_ENDPOINT=
