--- a/langchain-azure-agent/requirements.txt
+++ b/langchain-azure-agent/requirements.txt
@@ -1,14 +1,24 @@
-﻿azure-core==1.29.7
-azure-search-documents==11.6.0b4
-chainlit==1.2.0
-langchain==0.3.1
-langchain-community==0.3.1
-langchain-openai==0.2.1
-langchain-unstructured==0.1.5
-requests==2.31.0
-aiofiles==23.2.1
-aiohttp==3.9.3
-aiohttp_retry==2.8.3
+﻿azure-core==1.34.0
+azure-search-documents==11.5.3
+chainlit==2.6.9
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-openai==0.3.30
+requests==2.32.4
+aiofiles==24.1.0
+aiohttp==3.12.13
+aiohttp_retry==2.9.1
 async-timeout==4.0.3
-azure-identity==1.17.1
-azure-ai-documentintelligence==1.0.0b1
+azure-identity==1.23.0
+azure-ai-documentintelligence==1.0.2
+langgraph==0.6.5
+langgraph-checkpoint==2.1.1
+pypdf==6.0.0
+docx2txt==0.9
+chardet==5.2.0
+beautifulsoup4==4.13.4
+unstructured==0.18.13
+networkx==3.5
+pandas==2.3.1
+python-pptx==1.0.2
+langchain_sandbox==0.0.6
